add some api for student get questions

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,9 @@
 #spring.data.mongodb.uri=mongodb://dev:dev@localhost:27017/classvoice_dev
 spring.data.mongodb.uri=mongodb://dev:dev@mongo-node/classvoice_dev
+server.port=8443
+server.ssl.key-store=classpath:ssl.pfx
+server.ssl.key-store-password=214850624140684
+server.http.port=8080
+
 henrylee.asr.className=me.henrylee.classvoice.voice.TencentVoice
 henrylee.classvoice.root=/tmp/classvoice
