--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,11 @@ server.port=8443
 server.ssl.key-store=classpath:ssl.pfx
 server.ssl.key-store-password=214850624140684
 server.http.port=8080
+logging.path=/tmp/classvoice/log
+logging.level.me.henrylee.classvoice.model=INFO
+logging.level.me.henrylee.classvoice.service=INFO
+logging.level.me.henrylee.classvoice.controller=WARN
+logging.level.me.henrylee.classvoice.voice=INFO
 
 henrylee.asr.className=me.henrylee.classvoice.voice.TencentVoice
 henrylee.classvoice.root=/tmp/classvoice
