default save mp3 file add NLP component changed asr to async method

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,6 @@ logging.level.me.henrylee.classvoice.model=INFO
 logging.level.me.henrylee.classvoice.service=INFO
 logging.level.me.henrylee.classvoice.controller=WARN
 logging.level.me.henrylee.classvoice.voice=INFO
-
+henrylee.nlp.className=me.henrylee.classvoice.nlp.WordSeg
 henrylee.asr.className=me.henrylee.classvoice.voice.TencentVoice
 henrylee.classvoice.root=/tmp/classvoice
